[package]
name = "allternit-scheduler"
version = "0.1.0"
edition = "2021"
description = "Allternit Scheduler Daemon - Server-side cron scheduling service"

[[bin]]
name = "allternit-scheduler"
path = "src/main.rs"

[dependencies]
# Allternit internal
allternit-cron-parser = { path = "../../packages/cron-parser" }
allternit-cloud-api = { path = "../../cmd/allternit-cloud-api" }

# Async runtime
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Scheduling
tokio-cron-scheduler = { workspace = true }

# HTTP client for API calls
reqwest = { workspace = true }

# UUID
uuid = { workspace = true }

# Configuration
config = "0.14"
clap = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
