[package]
name = "voice-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
serde = { workspace = true }
serde_json = { workspace =true }
reqwest = { workspace = true, features = ["json", "rustls-tls", "multipart"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
tower-http = { workspace = true, features = ["cors"] }

[dev-dependencies]
tower = { workspace = true }
