[package]
name = "a2r-context-control"
version = "0.1.0"
edition = "2021"
description = "A2R Context Control Plane - Git Context Controller (GCC) implementation"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
sha2 = "0.10"
a2r-memory-kernel = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
