[package]
name = "a2rchitech-history"
version = "0.1.0"
edition = "2021"
description = "A2rchitech append-only JSONL ledger with chained hashes"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
sha2 = "0.10"
hex = "0.4"